--- a/ui/website/src/allBlocks/SingleBlogBanner/SingleBlogBanner.css
+++ b/ui/website/src/allBlocks/SingleBlogBanner/SingleBlogBanner.css
@@ -10,6 +10,13 @@
   background-size: 100% 100%;
 
 }
+/*.sbbannerWall:hover {
+    -webkit-transform: scale(1.1) ! important;
+    transform: scale(1.1) ! important;
+    cursor: pointer;
+    -webkit-transition-duration: .5s ! important;
+    transition-duration: .5s ! important;
+  }*/
 .nopadding{
 	padding: 0px;
 }
