--- a/ui/website/src/allBlocks/AllBlogsList/AllBlogsList.css
+++ b/ui/website/src/allBlocks/AllBlogsList/AllBlogsList.css
@@ -120,7 +120,7 @@
 
 }
 .Allblog{
-	margin-top: 240px ! important;
+	margin-top: 66px ! important;
 
 }
 .pricehover-float:hover{
@@ -131,4 +131,15 @@
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
     width: 100%;
+}
+.blogDateSBP{
+	margin-top: 30px;
+}
+.mt40{
+	text-align: justify;
+}
+.blogtext1{
+
+	margin-top: 120px;
+	left:441px;
 }
