--- a/ui/website/src/allBlocks/Banner/Banner.css
+++ b/ui/website/src/allBlocks/Banner/Banner.css
@@ -284,10 +284,11 @@ height: 150px;
 }
 .bannersun{
     position: absolute;
-    left: 400px;
+    left: 419px;
     z-index: 10;
     bottom: 0px;
-    right:20px;
+    right: 20px;
+    top: 12px;
 }
 .tree1{
     position: absolute;
