karuna added changes

--- a/ui/website/src/allBlocks/Aboutustextleft/Aboutustextleft.css
+++ b/ui/website/src/allBlocks/Aboutustextleft/Aboutustextleft.css
@@ -9,6 +9,13 @@
 	background-color: #f5f5f5;
 	border-radius: 100px;
 }
+.breadcrumb1responsive{
+    background-color: transparent;
+    width: 280px;
+    height: 34px;
+    background-color: #f5f5f5;
+    border-radius: 100px;
+}
 .triangleright{
 
       width: 0;
