--- a/ui/website/src/allPages/AboutUs/AboutUs.css
+++ b/ui/website/src/allPages/AboutUs/AboutUs.css
@@ -203,10 +203,10 @@
     height: 163px;
 }
    .b2width{
-   width: 377px;
+    width: 300px;
     margin-left: 211px;
     padding-top: 0px;
-    height: 163px;
+    height: 264px ! important;
 }
   .vision_align{
 padding-bottom: 31px;
@@ -296,11 +296,30 @@ margin-top: 100px;
     margin: 10px;
 }
 
+.blck1{
+    /*background-color: #ffc60b;*/
+    border-radius: 4px;
+    box-shadow: 0 10px 29px rgba(92,141,255,.22);
+    margin-bottom: 50px;
+    /*padding: 32px 40px 56px;*/
+    margin-top: 58px;
+    margin: 10px;
+}
+
+
 .blck1height{
     top: 137px;
     height: 196px;
     width: 427px;
     margin-left: 161px;
+    margin-top: 86px;
+    border-radius: 10px;
+}
+.blck1height1{
+    /*top: 137px;*/
+    height: 196px;
+    width: 300px;
+    /*margin-left: 161px;*/
     margin-top: 86px;
     border-radius: 10px;
 }
