--- a/ui/website/src/allBlocks/Banner/Banner.css
+++ b/ui/website/src/allBlocks/Banner/Banner.css
@@ -21,7 +21,7 @@
     background-size: 100% ;
     width: 100%;
   /*  margin-right: auto;*/
-    height: 100%;
+    height: 48em;
   /*  margin-left: auto;*/
     /*float: left;*/
     background-image: url(/images/banner.png);
