--- a/ui/website/src/allBlocks/Contactform/Contactform.css
+++ b/ui/website/src/allBlocks/Contactform/Contactform.css
@@ -4,6 +4,7 @@
   padding: 5px;
   margin-bottom: 20px;
   border-radius: 3px;
+  background-color: 
 }
 .contactformBtn{
   font-weight: 600;
@@ -43,7 +44,7 @@
 }
 .panel-title>.small, .panel-title>.small>a, .panel-title>a, .panel-title>small, .panel-title>small>a {
     color: #f57507;
-    font-weight: 550;
+    font-weight: 550;  
 }
 
 
