karuna added changes

--- a/ui/website/src/allBlocks/Banner/Banner.css
+++ b/ui/website/src/allBlocks/Banner/Banner.css
@@ -662,5 +662,10 @@ height: 90px;
   display: block ! important;
   cursor: pointer;
 }
+.pinhoverdata{
+  color: #333;
+  font-size: 12px;
+  padding-top: 10px;
+}
 
   
