--- a/ui/website/src/allBlocks/Resourceprivacy/Resourceprivacy.css
+++ b/ui/website/src/allBlocks/Resourceprivacy/Resourceprivacy.css
@@ -6,6 +6,10 @@
 	height: 400px;
     margin-bottom: 10px;
 }
+.blckk-ht1{
+    height: 680px;
+    margin-bottom: 10px;
+}
 
 .resource_blck{
     border-radius: 4px;
