--- a/ui/website/src/allBlocks/Commonplansblock/Commonplansblock.css
+++ b/ui/website/src/allBlocks/Commonplansblock/Commonplansblock.css
@@ -16,7 +16,7 @@
  }
 
 .plans_imgg{
-  width: 751px;
+  /*width: 751px;*/
   margin-left: 200px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19) , 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   text-align: center;
