--- a/ui/website/src/allPages/ContactPage/Contactpage.css
+++ b/ui/website/src/allPages/ContactPage/Contactpage.css
@@ -11,7 +11,7 @@
   color: #fff;
   /*background-image: url("/images/contactusbg.png");*/
   background-size: 100% 100%;
-  height: 800px;
+  /*height: 800px;*/
   background-color: #e8eaf6;
 }
 .contactcontent{
