--- a/ui/website/src/allBlocks/Map/Map.css
+++ b/ui/website/src/allBlocks/Map/Map.css
@@ -46,12 +46,16 @@
 }
 .submenu{
 	line-height: 23px;
-	padding-left: 7px;
+	padding-left: 10px;
 	color:#2F2F2F;
 }
 .submenu a{
 	color:#2F2F2F;
 	font-size:13px;
+	text-decoration: none;
+}
+.submenu a:hover{
+	color:#ffa500 !important;
 }
 .sitemapimg{
 	height: 100px;
