--- a/ui/website/src/allBlocks/ChallengesTemp/ChallengesTemp.css
+++ b/ui/website/src/allBlocks/ChallengesTemp/ChallengesTemp.css
@@ -1,16 +1,36 @@
 .innerBlocktepmlate4{
-	height: 500px;
+	height: 520px;
 }
 .B3T_challengesDiv {
-    top: 86px;
-    height: 237px;
-    width: 272px;
+    top: 130px;
+    height: 170px;
+    width: 303px;
     box-shadow: 3px 6px 4px 2px #eee;
-    margin-left: 40px
+    margin-left: 84px;
+    margin-bottom: 40px;
 }
 .B4T_img{
-	width: 240px;
+	margin-left: 77px;
+	height: 80px;
 }
 .B4T_txt{
 	margin-top: 25px;
+	margin-left: 20px;
+}
+.B4T_line{
+    background-color: #f08f00;
+  	width: 90px;
+  	height: 4px;
+  	top: 54px;
+    left: 15px;
+  	position: absolute;
+  	z-index: 999	
+}
+.B2T_challengesTitle{
+	top: 53px;
+    left: 563px;
+    position: absolute;
+    color: #009de2;
+    font-size: 35px;
+    font-weight: 600;
 }
