--- a/ui/website/src/allBlocks/ConsultingServices/ConsultingServices.css
+++ b/ui/website/src/allBlocks/ConsultingServices/ConsultingServices.css
@@ -12,10 +12,11 @@
 	height: 500PX;
 }
 .BT3_text{
-	margin-top: 150px;
+	/*margin-top: 150px;*/
 	font-size: 18px;
 
 }
+
 .BT3_subhead{
 	font-weight: 600;
 	margin-left: 18px;
