--- a/ui/website/src/common/Header/Header.css
+++ b/ui/website/src/common/Header/Header.css
@@ -403,7 +403,7 @@ dropdown-submenu {
     font-size: 15px;
     line-height: 23px;
     text-decoration: none;
-    text-transform: capitalize;
+    /*text-transform: capitalize;*/
     /*font-weight: 700;*/
 }
 
