karuna added changes

--- a/ui/website/src/allBlocks/ConsultDownstream/ConsultDownstream.css
+++ b/ui/website/src/allBlocks/ConsultDownstream/ConsultDownstream.css
@@ -3,10 +3,22 @@
 	background-image: url("/images/consultdown.png");
 	background-size: 100% 100%;
 }
+.innerBlocktConsult_res{
+  height: 1500px;
+  /*background-image: url("/images/consultdown.png");*/
+  background-size: 100% 100%;
+}
 .downimgtext{
 	position: absolute;
     top: 5em;
     left: 13em;
+    color: #009de2;
+    font-weight: 600;
+}
+.downimgtext_res{
+  /*position: absolute;
+    top: 5em;
+    left: 13em;*/
     color: #009de2;
     font-weight: 600;
 }
@@ -17,11 +29,25 @@
     text-align: justify; 
     font-size: 20px
 }
+.downimg_p_txt_res{
+    /*position: absolute;
+    top: 12.5em;
+    left: 13em;*/
+    text-align: justify; 
+    font-size: 18px
+}
 #consultdown_data0{
    position: absolute;
    top: 29em;
    left: 54em;
    width: 294px;
+
+}#consultdown_data0_res,#consultdown_data1_res,#consultdown_data2_res,#consultdown_data3_res{
+   /*position: absolute;
+   top: 29em;
+   left: 54em;*/
+   width: 294px;
+   font-weight: 600;
 
 }
 #consultdown_data1{
