--- a/ui/website/src/allBlocks/ConsultingServices/ConsultingServices.css
+++ b/ui/website/src/allBlocks/ConsultingServices/ConsultingServices.css
@@ -1,11 +1,23 @@
 .innerBlocktepmlate3{
  height: 830px;
 }
+.innerBlocktepmlate3_res{
+  height: 2400px;
+}
 .BT3_dataDiv{
 	top:25px;
-	width: 340px;
+	/*width: 277px;*/
 	margin-left: 82px;
 	margin-bottom: 20px;
+  min-height: 280px;
+
+}
+.BT3_dataDiv_res{
+  top:25px;
+  width: 340px;
+  /*margin-left: 82px;*/
+  margin-bottom: 20px;
+  min-height: 233px;
 
 }
 .BT3_innerBlock{
@@ -21,11 +33,16 @@
 	font-weight: 600;
 	margin-left: 18px;
 }
+.BT3_subhead_res{
+  margin-top: 85px;
+  font-weight: 600;
+  margin-left: 18px;
+}
 .BT3_img{
     margin-left: 77px;
     position: absolute;
-    top: 9px;
-    right: 130px;
+    top: 9%;
+    right: 12%;
 }
 .BT4_txt {
     margin-top: 17px;
@@ -41,6 +58,14 @@
     height: 60px;
     width: 60px;
     background-color: #ffffff;
+    box-shadow: 0px 0px 3px 1px;
+    /*margin-left: 112px;*/
+}
+.BT4_imgBack_res{
+    height: 60px;
+    width: 60px;
+    background-color: #ffffff;
+    margin-left: 112px;
     box-shadow: 0px 0px 3px 1px;
 }
 .Main_Cards__Bubble1:first-child {
