--- a/ui/website/src/allPages/Iogimplementpage/Iogimplementpage.css
+++ b/ui/website/src/allPages/Iogimplementpage/Iogimplementpage.css
@@ -12,3 +12,9 @@
 	border-radius: 100px;
 	margin-left: 20px;
 }
+.implementimage{
+	margin-top: 80px;
+	border-top: 3px solid #333;
+	border-left: 3px solid #333;
+	border-bottom: 3px solid #333;
+}
