--- a/ui/website/src/allBlocks/ExpertiseTemplateBanner/ExpertiseTemplateBanner.css
+++ b/ui/website/src/allBlocks/ExpertiseTemplateBanner/ExpertiseTemplateBanner.css
@@ -17,12 +17,13 @@
 
   }
   .BT1_bannerTitle{
-  	position: absolute;
-  	color: #fff;
+  	/*position: absolute;*/
+  	color: #333;
   	font-size: 43px;
     font-weight: 600;
-    left: 460px;
-    top: 215px;
+    margin-top: 120px;
+   /* left: 460px;
+    top: 215px*/;
   }
 
    
