karuna added changes

--- a/ui/admin/src/CMS/component/blockTemplate/TemplateBanner/TemplateBanner.css
+++ b/ui/admin/src/CMS/component/blockTemplate/TemplateBanner/TemplateBanner.css
@@ -17,12 +17,12 @@
 
   }
   .BT1_bannerTitle{
-  	/*position: absolute;*/
+  	position: absolute;
   	color: #fff;
   	font-size: 43px;
     font-weight: 600;
-    left: 273px;
-    top: 215px;
+    left: 542px;
+    top: 94px;
   }
 
    
