--- a/ui/website/src/blockTemplate/ImgTitle/ImgTitle.css
+++ b/ui/website/src/blockTemplate/ImgTitle/ImgTitle.css
@@ -17,15 +17,15 @@
 
   }
   .BT1_bannerTitle{
-  	/*position: absolute;*/
+  	position: absolute;
   	color: #fff;
   	font-size: 43px;
     font-weight: 600;
-    left: 460px;
+    left: 542px;
     top: 215px;
   }
   .HistorianTitle{
-    color: #333;
+    color: #fff;
   }
 
    
