--- a/ui/admin/src/CMS/component/blockTemplate/TemplateOverview/TemplateOverview.css
+++ b/ui/admin/src/CMS/component/blockTemplate/TemplateOverview/TemplateOverview.css
@@ -11,9 +11,9 @@
 	height: auto;
 }
 .B2T_overviewTitle{
-	  top: 53px;
+	  /*top: 53px;
     left: 419px;
-    position: absolute;
+    position: absolute;*/
     color: #009de2;
     font-size: 35px;
     font-weight: 600;
