--- a/ui/website/src/allBlocks/ServicesOffered/ServicesOffered.css
+++ b/ui/website/src/allBlocks/ServicesOffered/ServicesOffered.css
@@ -2,7 +2,7 @@
  	height:650px;
  }
  .B4T_ServicesDiv{
-    top: 135px;
+    /*top: 135px;*/
     box-shadow: 0px 0px 3px 0px #eee;
     margin-left: 76px;
     margin-bottom: 20px;
@@ -19,10 +19,12 @@
   	padding-left: 45px;
   }
   .B2T_serviceTitle{
-	top: 53px;
+	/*top: 53px;
     left: 563px;
-    position: absolute;
+    position: absolute;*/
     color: #009de2;
     font-size: 35px;
     font-weight: 600;
+    margin-top: 75px;
 }
+
