--- a/ui/website/src/blockTemplate/ExpertiseServicesOffered/ExpertiseServicesOffered.css
+++ b/ui/website/src/blockTemplate/ExpertiseServicesOffered/ExpertiseServicesOffered.css
@@ -19,10 +19,11 @@
   	padding-left: 45px;
   }
   .B2T_serviceTitle{
-	top: 53px;
+	/*top: 53px;
     left: 563px;
-    position: absolute;
+    position: absolute;*/
     color: #009de2;
     font-size: 35px;
     font-weight: 600;
+    margin-top: 75px;
 }
