karuna added changes

--- a/ui/website/src/allBlocks/TemplateOverview/TemplateOverview.css
+++ b/ui/website/src/allBlocks/TemplateOverview/TemplateOverview.css
@@ -2,10 +2,13 @@
     background-color: #f08f00;
   	width: 90px;
   	height: 4px;
-  	top: 54px;
-    left: 60px;
-  	position: absolute;
-  	z-index: 999	
+  	/*top: 54px;
+    left: 60px;*/
+  	/*position: absolute;*/
+  	z-index: 999	;
+    margin-left: 57px;
+    margin-top: 8px;
+
 }
 .innerBlocktepmlate1{
 	height: auto;
@@ -17,7 +20,7 @@
     color: #009de2;
     font-size: 35px;
     font-weight: 600;
-    margin-top: 60px;
+    margin-top: 25px;
 }
 
 .B2T_p{
