--- a/ui/website/src/blockTemplate/TemplateOverview/TemplateOverview.css
+++ b/ui/website/src/blockTemplate/TemplateOverview/TemplateOverview.css
@@ -3,8 +3,8 @@
   	width: 90px;
   	height: 4px;
   	top: 54px;
-    left: 60px;
-  	position: absolute;
+    /*left: 60px;*/
+  	/*position: absolute;*/
   	z-index: 999	
 }
 .innerBlocktepmlate1{
