--- a/ui/website/src/blockTemplate/TitleRrpeatedImgGrp/TitleRrpeatedImgGrp.css
+++ b/ui/website/src/blockTemplate/TitleRrpeatedImgGrp/TitleRrpeatedImgGrp.css
@@ -221,7 +221,7 @@
     line-height: 23px;
     font-size: 16px;
     color: #333;
-    margin-right: 15px;
+    margin-left: 15px;
   }
   .textboxposition{
     margin-top: 20px;
