--- a/ui/website/src/blockTemplate/ExpertiseServicesOffered/ExpertiseServicesOffered.css
+++ b/ui/website/src/blockTemplate/ExpertiseServicesOffered/ExpertiseServicesOffered.css
@@ -1,12 +1,12 @@
  .innerBlock5tepmlate{
- 	height: 800px;
+ 	height: auto;
  }
  .B4T_ServicesDiv{
     top: 45px;
     box-shadow: 0px 0px 3px 0px #eee;
     margin-left: 76px;
     margin-bottom: 20px;
-    min-height: 130px;
+    min-height: 150px;
   }
   .B5T_img{
   	/*width: 185px;*/
