--- a/ui/website/src/allBlocks/ApplicationsTemp/ApplicationsTemp.css
+++ b/ui/website/src/allBlocks/ApplicationsTemp/ApplicationsTemp.css
@@ -337,5 +337,7 @@
     font-size: 11px;
   }
   .iconclass{
-    margin-left: -15px;
+    /*margin-left: -15px;*/
+    width:40px;
+    margin-top: 40px;
   }
