--- a/ui/website/src/allBlocks/Banner/Banner.css
+++ b/ui/website/src/allBlocks/Banner/Banner.css
@@ -636,7 +636,7 @@ height: 90px;
     position: absolute;
 }
 .dataonHover1{
- 
+  display: none;
   height: 117px;
   width: 241px;
   border-radius: 5px;
@@ -658,7 +658,7 @@ height: 90px;
     margin-top: -133px;
     position: absolute;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
-    /*border:1px solid #F2F2F2;*/
+  
 }
  .triangle-down {
       position: absolute;
@@ -747,7 +747,7 @@ height: 90px;
       left:31px;
       top:-2px;
     }
-    .hoveroilsign2:hover .dataonHover2  {
+.hoveroilsign2:hover .dataonHover2  {
       display: block ! important;
       cursor: pointer;
 }
@@ -756,6 +756,19 @@ height: 90px;
   cursor: pointer;
 }
 .hoveroilsign2:hover .triangle-down21  {
+  display: block ! important;
+  cursor: pointer;
+}
+
+.hoveroilsign3:hover .dataonHover1  {
+      display: block ! important;
+      cursor: pointer;
+}
+.hoveroilsign3:hover .triangle-down2  {
+  display: block ! important;
+  cursor: pointer;
+}
+.hoveroilsign3:hover .triangle-down21  {
   display: block ! important;
   cursor: pointer;
 }
